dev/hize-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hize-site
  namespace: hize-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: hize-site
      app.kubernetes.io/name: hize-site
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: hize-site
        app.kubernetes.io/name: hize-site
    spec:
      imagePullSecrets:
        - name: github-registry-credentials
      containers:
        - image: 'nginx:latest'
#        - image: 'ghcr.io/hize-bv/hize_website:1be38cc4acad4cf3192eaac4daab0fec95ab0278'
          name: hize-site
          livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 2
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          resources:
            requests:
              memory: 20Mi
              cpu: 30m
            limits:
              memory: 50Mi
      serviceAccountName: hize-site
