dev/hize-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: hize.nl
    external-dns.alpha.kubernetes.io/ttl: '120'
  name: hize-site
  namespace: hize-site
spec:
  rules:
    - host: hize.nl
      http:
        paths:
          - backend:
              service:
                name: hize-site
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - hize.nl
      secretName: hize-tls
